# Machine-learning-and-image-processing

./: ARCHITECTURE.md  BUILD_SUMMARY.txt  INDEX.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  next.config.mjs  pyproject.toml  requirements.txt
app/: layout.tsx  page.tsx
app/api/predict/: route.ts
hooks/: use-mobile.ts
models/: feature_names.pkl  feature_scaler.pkl  model_metadata.json  random_forest_ipc_classifier.pkl
results/: evaluation_metrics.json  evaluation_report.txt  execution_log_20260320_184458.txt
scripts/: config.py  data_synthesis.py  evaluation.py  feature_extraction.py  inference.py  main.py  preprocessing.py  training.py
